--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#cakes" class="nav__link">View Cakes</a>
+                        <a href="gallery.html" class="nav__link">View Cakes</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#order" class="nav__link">Order Now</a>
+                        <a href="order.html" class="nav__link">Order Now</a>
                     </li>
                 </ul>
 
@@ -68,7 +68,7 @@
                         Welcome to <br> SSR Bakery
                     </h1>
 
-                    <a href="#" class="button">Order Now</a>
+                    <a href="order.html" class="button">Order Now</a>
                     <img src="assets/img/bread-1.png" alt="image" class="home__bread">
                 </div>
 
@@ -135,7 +135,7 @@
                     </article>
                 </div>
 
-                <a href="#" class="new__button button">See More Options</a>
+                <a href="gallery.html" class="new__button button">See More Options</a>
             </div>
         </section>
 
